package BaiTapThucHanh.observer.CA6;

public interface PlayerDataListener {
    public void listen(PlayerData data);
}
